infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public
spec:
  rules:
    - host: replace-before-deploying.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
